# FRConjugation.Swift

./: .gitignore  Package.swift  README.md  WRAPPERS.md
.github/workflows/: release.yml  train_model.yml
c_wrapper/: CMakeLists.txt  README.md  conjugation.cpp  conjugation.h  conjugation_meta.json  export_model.py  test_conjugation.cpp
objc_wrapper/: FRConjugation.h  FRConjugation.m  README.md
python_model/: README.md  USAGE.md  build_final_model.py  export_weights.py  french_conjugation_model.py  full_test_model.py  test_model.py  train_model.py
swift_lib/: Package.swift  project.yml
swift_lib/FRConjugation.xcodeproj/: project.pbxproj
swift_lib/FRConjugation.xcodeproj/xcshareddata/xcschemes/: FRConjugation.xcscheme
swift_lib/Sources/CFRConjugation/: shim.c
swift_lib/Sources/CFRConjugation/include/: conjugation.h
swift_lib/Sources/FRConjugation/: Conjugator.swift  InferenceEngine.swift  Layers.swift  Tensor.swift  Types.swift  VerbCache.swift
swift_lib/Sources/FRConjugation/Resources/: model.json
swift_lib/Tests/FRConjugationTests/: ConjugationTests.swift
swift_wrapper/: Bridging-Header.h  ConjugationModel.swift  README.md  main.swift
